[gd_scene load_steps=3 format=3 uid="uid://dqoc15bu7f873"]

[ext_resource type="Script" uid="uid://dd5d5qrn66snv" path="res://Scenes/place_detection.gd" id="1_7sixe"]
[ext_resource type="PackedScene" uid="uid://bev1jin6r7t6n" path="res://PraxisMapper/Controls/GetFile.tscn" id="2_h1pll"]

[node name="PlaceDetection" type="Node2D"]
script = ExtResource("1_7sixe")

[node name="lblLoc" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 36
text = "Location: Pending..."

[node name="lblLoc3" type="Label" parent="."]
offset_left = 3.0
offset_top = 53.0
offset_right = 238.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 36
text = "Data Present:"

[node name="lblLoc4" type="Label" parent="."]
offset_left = 5.0
offset_top = 106.0
offset_right = 240.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 36
text = "Sets/Counts:"

[node name="lblDataCounts" type="Label" parent="."]
offset_left = 5.0
offset_top = 159.0
offset_right = 1070.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 36

[node name="lblLoc2" type="Label" parent="."]
offset_left = 1.0
offset_top = 288.0
offset_right = 120.0
offset_bottom = 338.0
theme_override_font_sizes/font_size = 36
text = "Places:"

[node name="lblPlaceList" type="Label" parent="."]
offset_left = -1.0
offset_top = 344.0
offset_right = 1072.0
offset_bottom = 1975.0
theme_override_font_sizes/font_size = 36
autowrap_mode = 3

[node name="GetFile" parent="." instance=ExtResource("2_h1pll")]

[node name="Button" type="Button" parent="."]
offset_left = 464.0
offset_top = 1805.0
offset_right = 704.0
offset_bottom = 1858.0
theme_override_font_sizes/font_size = 32
text = "Return to Main"

[connection signal="pressed" from="Button" to="." method="Close"]
